fix: z-index between header and title car

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -123,6 +123,7 @@ header
 	right: 0;
 	background: transparent;
 	border-bottom: none;
+	z-index: 1;
 
 
 }
@@ -199,6 +200,8 @@ nav
   	width: 100%;
   	min-height: 100vh;
   	/* padding-top: var(--lspace-220); */
+
+	z-index: 0;
 
 }
 
